// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollMode: always block: center, inline: center 1`] = `
Object {
  "left": 1250,
  "top": 950,
}
`;

exports[`scrollMode: always block: center, inline: end 1`] = `
Object {
  "left": 900,
  "top": 950,
}
`;

exports[`scrollMode: always block: center, inline: nearest 1`] = `
Object {
  "left": 900,
  "top": 950,
}
`;

exports[`scrollMode: always block: center, inline: nearest 2`] = `
Object {
  "left": 1600,
  "top": 950,
}
`;

exports[`scrollMode: always block: center, inline: start 1`] = `
Object {
  "left": 1600,
  "top": 950,
}
`;

exports[`scrollMode: always block: end, inline: center 1`] = `
Object {
  "left": 1250,
  "top": 700,
}
`;

exports[`scrollMode: always block: end, inline: end 1`] = `
Object {
  "left": 900,
  "top": 700,
}
`;

exports[`scrollMode: always block: end, inline: nearest 1`] = `
Object {
  "left": 900,
  "top": 700,
}
`;

exports[`scrollMode: always block: end, inline: nearest 2`] = `
Object {
  "left": 1600,
  "top": 700,
}
`;

exports[`scrollMode: always block: end, inline: start 1`] = `
Object {
  "left": 1600,
  "top": 700,
}
`;

exports[`scrollMode: always block: nearest, inline: center 1`] = `
Object {
  "left": 1250,
  "top": 700,
}
`;

exports[`scrollMode: always block: nearest, inline: center 2`] = `
Object {
  "left": 1250,
  "top": 1200,
}
`;

exports[`scrollMode: always block: nearest, inline: end 1`] = `
Object {
  "left": 900,
  "top": 700,
}
`;

exports[`scrollMode: always block: nearest, inline: end 2`] = `
Object {
  "left": 900,
  "top": 1200,
}
`;

exports[`scrollMode: always block: nearest, inline: nearest 1`] = `
Object {
  "left": 900,
  "top": 700,
}
`;

exports[`scrollMode: always block: nearest, inline: nearest 2`] = `
Object {
  "left": 1600,
  "top": 1200,
}
`;

exports[`scrollMode: always block: nearest, inline: start 1`] = `
Object {
  "left": 1600,
  "top": 700,
}
`;

exports[`scrollMode: always block: nearest, inline: start 2`] = `
Object {
  "left": 1600,
  "top": 1200,
}
`;

exports[`scrollMode: always block: start, inline: center 1`] = `
Object {
  "left": 1250,
  "top": 1200,
}
`;

exports[`scrollMode: always block: start, inline: end 1`] = `
Object {
  "left": 900,
  "top": 1200,
}
`;

exports[`scrollMode: always block: start, inline: nearest 1`] = `
Object {
  "left": 900,
  "top": 1200,
}
`;

exports[`scrollMode: always block: start, inline: nearest 2`] = `
Object {
  "left": 1600,
  "top": 1200,
}
`;

exports[`scrollMode: always block: start, inline: start 1`] = `
Object {
  "left": 1600,
  "top": 1200,
}
`;
